# heat_solver_3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/laser/: CMakeLists.txt  main.cpp
examples/plasma_jet/: CMakeLists.txt  main.cpp
examples/plasma_jet/visualization/: CMakeLists.txt  main.c
examples/plasma_torch/: CMakeLists.txt  main.cpp
examples/plasma_torch/visualization/: CMakeLists.txt  README  README.md  main.c
examples/quasilinear/: CMakeLists.txt  main.cpp
include/heat_solver_3d/: equation_params.hpp  grid_params.hpp  handler.hpp  layer.hpp  mpi_params.hpp  solver.hpp
src/: solver.cpp
tools/results_reader/: CMakeLists.txt  main.c
